--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,46 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>throttle</groupId>
+    <groupId>nu.ganslandt.util</groupId>
     <artifactId>throttle</artifactId>
     <version>0.1-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
+            <version>4.8</version>
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+    <distributionManagement>
+        <repository>
+            <id>repository.ganslandt.nu</id>
+            <name>release.repository.ganslandt.nu</name>
+            <url>http://home.ganslandt.nu:8080/artifactory/snapshot</url>
+        </repository>
+        <snapshotRepository>
+            <id>repository.ganslandt.nu</id>
+            <name>snapshot.repository.ganslandt.nu</name>
+            <url>http://home.ganslandt.nu:8080/artifactory/snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
